# acidnet

./: .env.example  .gitignore  AGENTS.md  acidnet_qwen3.5_4b_gguf_lora.ipynb  acidnet_qwen3.5_4b_unsloth_t4_colab.ipynb  pyproject.toml  run_acidnet.py  run_acidnet_gui.py  run_acidnet_web.py  run_bootstrap_qwen4b_pipeline.py  run_circulation_eval.py  run_dev_world.ps1  run_dialogue_preference_export.py  run_dialogue_rl_train.py  run_export_gguf.py  run_finetune_manifest_export.py  run_llama_server.ps1  run_local_adapter_dev_loop.ps1  run_local_adapter_server.py  run_local_qwen_dev_loop.ps1  run_merge_lora_adapter.py  run_model_gate.py  run_monkey_world.py  run_openai_teacher_batch_normalize.py  run_openai_teacher_batch_prepare.py  run_prompt_only_baseline_eval.py  run_publish_hf_artifacts.py  run_qwen4b_baseline_pipeline.py  run_qwen4b_baseline_prep.py  run_qwen4b_baseline_train.py  run_tail_event_log.ps1  run_teacher_prompt_export.py  run_teacher_sft_merge.py  run_teacher_sft_split.py  run_wsl_qwen_training.ps1
docs/: npc-simulation-implementation-plan.md
docs_kr/: README.md  npc-simulation-implementation-plan.md
models/: .gitignore  README.md
scripts/: launch_qwen3_5_4b_runtime_dialogue_bf16_fast_train.cmd  launch_qwen3_5_4b_runtime_dialogue_bf16_safe_train.cmd  launch_qwen3_5_4b_runtime_dialogue_low_vram_train.cmd  launch_qwen3_5_4b_runtime_dialogue_unsloth_wsl_full.sh  launch_qwen3_5_4b_runtime_dialogue_unsloth_wsl_hungerfix_smoke.sh  launch_qwen3_5_4b_runtime_dialogue_unsloth_wsl_promptrefresh_foodfix_smoke.sh  setup_wsl_uv_unsloth.sh  (+2 more)
tests/: test_storage.py  (+16 more)
(+117 files in other folders)
