[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acidnet"
version = "0.1.0"
description = "NPC village simulation with persona-aware local LLMs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8,<3.0",
]

[project.optional-dependencies]
training = [
    "pyarrow>=17,<20",
]

[project.scripts]
acidnet = "acidnet.cli:main"
acidnet-gui = "acidnet.frontend.tk_app:main"
acidnet-web = "acidnet.frontend.web_app:main"

[tool.setuptools.package-data]
"acidnet.frontend" = ["web/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
